<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:padding="24dp">

    <ImageView
        android:id="@+id/completionImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/rualingo_logo"
        app:layout_constraintBottom_toTopOf="@+id/completionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/completionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lesson_complete"
        android:textColor="@color/duo_green"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/completionSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completionImage" />

    <TextView
        android:id="@+id/completionSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_finished_the_lesson"
        android:textColor="@color/duo_text_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/finishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completionTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishButton"
        style="@style/DuolingoButton.Green"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>